<resources>
    <string name="app_name">Pure Notes</string>
    <string name="title_activity_main">All Notes</string>
    <string name="title_activity_second">NOTE TITLE GOES HERE</string>
    <string name="hint_activity_second">Write your note here…</string>
    <string name="action_settings">Settings</string>
    <string name="action_change_main_theme">Change Main Toolbar Color</string>
    <string name="action_change_secondary_theme">Change Secondary Toolbar Color</string>
    <string name="action_search">Search</string>
    <string name="action_sort_notes">Sort Notes…</string>
    <string name="action_about">About</string>
    <string name="action_delete_note">Delete Note</string>
    <string name="action_share_note">Share Note</string>
    <string name="action_convert_note">Convert Note…</string>
    <string name="create_note_dialog_title">New Note Creation</string>
    <string name="create_note_dialog_hint">Type title of new note…</string>
    <string name="create_note_dialog_create_note_button">Create Note</string>
    <string name="create_note_dialog_cancel_button">Cancel</string>
    <string name="delete_note_dialog_title">Are you sure you want to delete this note?</string>
    <string name="delete_note_dialog_delete_note_button">DELETE</string>
    <string name="delete_note_dialog_cancel_button">Cancel</string>
    <string name="edit_text_search_hint">Search your notes…</string>
    <string name="sort_notes_dialog_title">Sort Notes…</string>
    <string name="sort_notes_alphabetically_dialog_option">Alphabetically</string>
    <string name="sort_notes_by_date_modified_dialog_option">By Date Modified</string>
    <string name="sort_notes_dialog_apply_button">Apply</string>
    <string name="sort_notes_dialog_cancel_button">Cancel</string>
    <string name="about_dialog_title">About</string>
    <string name="close">Close</string>
    <string name="saved_sorting_method_key">sortingMethod</string>


    <string name="about_text">Developed by LMEM Software. \n\n
        Main app icon made by Freepik from www.flaticon.com. See Freepik\'s work at https://www.freepik.com/home \n\n
        New note icon made by Picol from www.flaticon.com. See Picol\'s work at https://www.flaticon.com/authors/picol\n\n
        Thank you for using Pure Notes
    </string>





</resources>
