<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_24px"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <group android:id="@+id/main_group_1">
        <item
            android:id="@+id/action_sort_notes"
            android:title="@string/action_sort_notes"
            app:showAsAction="never" />
    </group>

    <group android:id="@+id/main_group_2">
        <item
            android:id="@+id/action_change_theme"
            android:title="@string/action_change_main_theme"
            app:showAsAction="never" />
    </group>

    <group android:id="@+id/main_group_3">
        <item
            android:id="@+id/action_about"
            android:title="@string/action_about"
            app:showAsAction="never" />
    </group>

</menu>