<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_share_note_button"
        android:icon="@drawable/ic_share_24px"
        android:title="@string/action_share_note"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete_note_button"
        android:icon="@drawable/ic_baseline_delete_outline_24px"
        android:title="@string/action_delete_note"
        app:showAsAction="ifRoom" />

    <group android:id="@+id/secondary_group_1">
        <item
            android:id="@+id/action_delete_note"
            android:title="@string/action_delete_note"
            app:showAsAction="never" />
    </group>

    <group android:id="@+id/secondary_group_2">
        <item
            android:id="@+id/action_share_note"
            android:title="@string/action_share_note"
            app:showAsAction="never" />
    </group>

    <group android:id="@+id/secondary_group_3">
        <item
            android:id="@+id/action_change_secondary_theme"
            android:title="@string/action_change_secondary_theme"
            app:showAsAction="never" />
    </group>

<!--    <item-->
<!--        android:id="@+id/action_convert_note"-->
<!--        android:title="@string/action_convert_note"-->
<!--        app:showAsAction="never" />-->

</menu>